--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,6 +9,7 @@
     <h1>Posts</h1>
 
     <div th:each="post : ${posts}">
+        <img width="50" th:src="${image.url}" alt="" th:each="image : ${post.images}">
         <h3 th:text="${post.title}"></h3>
         <p th:text="${post.body}"></p>
         <a th:href="@{'/posts/' + ${post.id} + '/edit'}">Edit Post</a>
@@ -16,7 +17,6 @@
             <button>Delete Post</button>
         </form>
     </div>
-
 
 </body>
 </html>
