complete form model binding exercise walkthrough

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -12,7 +12,7 @@
         <div>
             <label for="title">Title</label>
             <br>
-            <input id="title" th:field="*{title}" type="text" placeholder="Enter Blog Post Title">
+            <input th:field="*{title}" type="text" placeholder="Enter Blog Post Title">
         </div>
         <div>
             <label for="body">Body</label>
