--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
+
+<!-- ================== HEAD -->
 <head th:fragment="head (title)">
     <meta charset="UTF-8">
     <title th:text="${'My Blog: ' + title}"></title>
@@ -8,6 +11,8 @@
 </head>
 <body>
 
+
+<!-- ================== NAVBAR -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">My Blog</a>
@@ -15,17 +20,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex">
+            <ul class="navbar-nav mb-2 mb-lg-0 d-flex">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/posts}">Posts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/posts/create}">Create Post</a>
                 </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
@@ -33,6 +40,8 @@
     </div>
 </nav>
 
+
+<!-- ================== POST FORM -->
 <form th:fragment="post-form(action, btnText)" th:action="${action}" th:method="POST" th:object="${post}">
     <div class="form-group mb-3">
         <label class="form-label fw-bold" for="title">Title</label>
@@ -47,10 +56,14 @@
     </div>
 </form>
 
+
+<!-- ================== HEADER -->
 <header th:fragment="header(text)">
     <h1 class="display-1 text-center my-5" th:text="${text}"></h1>
 </header>
 
+
+<!-- ================== BOOTSTRAP SCRIPT -->
 <script th:fragment="bootstrap-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
