--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -5,7 +5,7 @@
     <nav th:insert="partials/partials.html :: navbar"></nav>
     <header th:insert="partials/partials.html :: header('Edit Post')"></header>
     <main class="container">
-        <form th:insert="partials/partials.html :: post-form(@{/posts/{id}/edit(id=${id})}, 'Edit Post')"></form>
+        <th:block th:insert="partials/partials.html :: post-form(@{/posts/{id}/edit(id=${id})}, 'Edit Post')"></th:block>
     </main>
     <th:block th:insert="partials/partials.html :: bootstrap-js" />
 </body>
